improve sniproxy.conf

--- a/files/sniproxy.conf
+++ b/files/sniproxy.conf
@@ -9,11 +9,17 @@ resolver {
 listener 80 {
         proto http
 }
-
 listener 443 {
         proto tls
 }
-
+#993 imap(ssl)
+listener 993 {
+	proto tls
+}
+#465 smtp(ssl)
+listener 465 {
+	proto tls
+}
 table {
 	.* *
 }
